--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  smooth_page_indicator: ^1.2.1
+  flutter_native_splash: ^2.4.6
+  equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
